# memento-vault

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bootstrap.sh  create-releases.sh  docker-compose.cloudflare.yml  docker-compose.yml  fly.toml  install.sh  memento.yml.example  package.json  pyproject.toml  setup-remote.sh  uninstall.sh
Formula/: memento-vault.rb
agents/: concierge.md
benchmark/: README.md  apply_sweep_results.py  baseline_results.json  e2e_lifecycle.py  latency_projection.json  latency_projection.py  longmemeval_adapter.py  longmemeval_retrieval.py  optuna_sweep.py  replay_benchmark.py  scale_lifecycle.py  sweep-findings-2026-03-23.md
deploy/: cloud-init-oracle.yml
docs/: agent-agnostic-design.md  configuration.md  frontmatter-schema.md  how-it-works.md  performance-analysis.md  session-report-remote-vault-hardening.md
extensions/: memento.ts
hooks/: _backfill_certainty.py  agent-wrapper.py  memento-inception.py  memento-remote-sync.py  memento-sweeper.py  memento-sync-retry.py  memento-triage.py  memento_utils.py  stale-refs.py  tenet_reranker.py  vault-briefing.py  vault-commit.sh  vault-recall.py  vault-tool-context.py  wait-and-commit.py
lib/: install-lib.sh  install_helpers.py
memento/: __init__.py  __main__.py  auth.py  config.py  embedded_search.py  embedding.py  graph.py  indexer.py  lifecycle.py  llm.py  mcp_server.py  pi_bridge.py  remote_client.py  search.py  search_backend.py  store.py  sync_ledger.py  types.py  utils.py
templates/: qmd-collection.yml
tests/: conftest.py  test_adapters.py  test_auth.py  (+49 more)
(+30 files in other folders)
