[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Many long lines are in LLM prompt strings; enforced by formatter instead

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
